# archivematica

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  RELEASENOTES.md  ]  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: acceptance-test.yml  oidc-integration-test.yml  test.yml
hack/: Dockerfile  Makefile  docker-compose.tests.yml  docker-compose.yml
hack/etc/nginx/conf.d/: archivematica.conf  index.html  index.html.1
src/MCPClient/client/: gearman.py  job.py  loader.py
src/MCPClient/clientScripts/: archivematica_clamscan.py  compress_aip.py  convert_dataverse_structure.py  has_packages.py  identify_file_format.py  move_to_backlog.py  parse_dataverse_mets.py  policy_check.py  validate_file.py  verify_aip.py
src/MCPClient/lib/client/: loader.py  metrics.py  pool.py  worker.py
src/MCPClient/lib/clientScripts/: characterize_file.py  create_mets_v2.py  create_transfer_mets.py  determine_aip_version_key_exit_code.py  identify_file_format.py  move_to_backlog.py  normalize.py  policy_check.py  transcribe_file.py
src/MCPServer/assets/: workflow.json
src/MCPServer/server/: packages.py  rpc_server.py
src/MCPServer/server/jobs/: client.py
src/archivematica/MCPClient/: archivematicaClient.py
src/archivematica/MCPClient/client/: gearman.py  job.py  loader.py  mcp.py  metrics.py  pool.py  utils.py  worker.py
src/archivematica/MCPClient/clientScripts/: archivematicaCreateMETSMetadataCSV.py  archivematicaCreateMETSMetadataXML.py  archivematicaCreateMETSReingest.py  archivematicaCreateMETSRights.py  archivematicaCreateMETSRightsDspaceMDRef.py  archivematicaCreateMETSTrim.py  archivematica_clamscan.py  assign_file_uuids.py  assign_uuids_to_directories.py  bag_with_empty_directories.py  bind_pid.py  bind_pids.py  change_object_names.py  change_sip_name.py  characterize_file.py  check_for_access_directory.py  check_for_service_directory.py  cmd_chmod.py  cmd_cp.py  cmd_mkdir.py  cmd_mv.py  cmd_test.py  cmd_tree.py  compress_aip.py  convert_dataverse_structure.py  copy_recursive.py  copy_submission_docs.py  copy_transfer_submission_documentation.py  copy_transfers_metadata_and_logs.py  create_aic_mets.py  create_event.py  create_mets_dataverse_v2.py  create_mets_v2.py  create_sip_from_transfer_objects.py  create_sips_from_trim_transfer_containers.py  create_transfer_metadata.py  create_transfer_mets.py  determine_aip_version_key_exit_code.py  dip_generation_helper.py  email_fail_report.py  (+61 more)
src/archivematica/MCPClient/install/: clientConfig.logging.json
src/archivematica/MCPClient/settings/: common.py  test.py  testmysql.py
src/archivematica/MCPServer/: archivematicaMCP.py
src/archivematica/MCPServer/install/: serverConfig.logging.json
src/archivematica/MCPServer/server/: mcp.py  metrics.py  packages.py  processing_config.py  queues.py  rpc_server.py  shared_dirs.py  workflow.py
src/archivematica/MCPServer/settings/: common.py  test.py  testmysql.py
src/archivematica/archivematicaCommon/: appconfig.py  archivematicaFunctions.py  bindpid.py  databaseFunctions.py  dbconns.py  dicts.py  elasticSearchFunctions.py  executeOrRunSubProcess.py  fileOperations.py  namespaces.py  storageService.py
src/archivematica/dashboard/: manage.py  urls.py  wsgi.py
src/archivematicaCommon/: archivematicaFunctions.py  dicts.py
src/archivematicaCommon/lib/: archivematicaFunctions.py  elasticSearchFunctions.py  executeOrRunSubProcess.py
src/dashboard/fpr/: forms.py
src/dashboard/frontend/: package-lock.json  package.json
src/dashboard/settings/: base.py
tests/MCPClient/: conftest.py  test_antivirus.py  test_antivirus_clamdscan.py  test_antivirus_clamscan.py  test_archivematicaCreateMETSMetadataCSV.py  test_archivematicaCreateMETSMetadataXML.py  test_archivematicaCreateMETSRights.py  test_archivematicaCreateMETSRightsDspaceMDRef.py  test_assign_file_uuids.py  test_assign_uuids_to_directories.py  test_characterize_file.py  test_check_for_access_directory.py  test_create_aic_mets.py  test_create_aip_mets.py  test_create_dataverse_mets.py  test_create_mets_v2.py  test_create_transfer_mets.py  test_dip_generation_helper.py  test_email_fail_report.py  test_ensure_no_mutable_globals.py  test_extract_contents.py  test_filename_change.py  test_fpr_commands.py  test_has_packages.py  test_identify_file_format.py  test_job.py  test_json_conversion.py  test_load_labels_from_csv.py  test_load_premis_events_from_xml.py  test_move_or_merge.py  test_move_to_backlog.py  test_normalize.py  test_parse_dataverse.py  test_parse_external_mets.py  test_parse_mets_to_db.py  test_pid_components.py  test_policy_check.py  test_post_store_aip_hook.py  test_reingest_mets.py  test_restructure_dip_for_content_dm_upload.py  (+7 more)
tests/MCPServer/: test_gearman.py  test_integration.py  test_mcp.py  test_package.py  test_processing_config.py  test_queues.py  test_rpc_server.py  test_translation.py  test_workflow.py  test_workflow_abilities.py
tests/archivematicaCommon/: test_appconfig.py  test_archivematica_functions.py  test_bindpid.py  test_database_functions.py  test_dicts.py  test_elasticsearch_functions.py  test_env_configparser.py  test_execute_functions.py  test_file_operations.py  test_gearman_encoder.py  test_identifier_functions.py  test_storage_service.py
tests/dashboard/: test_access.py  test_api.py  test_api_v2beta.py  test_auth.py  test_backlog.py  test_cas.py  test_dashboardsetting_manager.py  test_filesystem_ajax.py  test_helpers.py  test_ingest.py  test_middleware.py  test_migrations.py  test_models.py  test_oidc.py  test_password_validation.py  test_rights.py  test_shibboleth_login.py  test_signals.py  test_templatetags.py  test_transfer.py
tests/dashboard/components/: test_advanced_search.py
tests/dashboard/fpr/: test_command_get_fpr_changes.py  test_command_import_pronom_ids.py  test_forms.py  test_utils.py  test_views.py
tests/dashboard/main/: conftest.py  test_command_purge_transient_processing_data.py  test_transfer.py
tests/integration/: docker-compose.yml  test_oidc_auth.py
(+160 files in other folders)
